--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "http-server": "node ./http-server/index.js"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
