--- a/http-server/package.json
+++ b/http-server/package.json
@@ -13,6 +13,7 @@
     "cookies": "^0.8.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "uuidv4": "^6.0.2"
   }
 }
